--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ div[class$="item"] > p {
 .services__box {
   margin-top: 2em;
   display: grid;
-  gap: 1.4em;
+  gap: 2em;
 }
 
 .services__item {
@@ -311,7 +311,7 @@ div[class$="item"] > p {
 .how__box {
   margin-top: 2em;
   display: grid;
-  gap: 1.4em;
+  gap: 3em;
 }
 
 .how__item {
@@ -364,7 +364,7 @@ div[class$="item"] > p {
 .gallery {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1em;
+  gap: 0.5em;
 }
 
 .gallery__item {
@@ -461,14 +461,13 @@ div[class$="item"] > p {
 
 .numbers__box {
   display: grid;
-  gap: 1em;
+  gap: 2em;
 }
 
 .numbers__item {
-  border: 1px solid var(--yellow);
+  border: 2px solid var(--yellow);
   padding: 2em 2em;
   border-radius: var(--border-radius);
-  box-shadow: 0 0 10px 0 var(--shadow-color-white);
 }
 
 .numbers__item > h3 {
@@ -518,7 +517,7 @@ div[class$="item"] > p {
 .team__box {
   margin-top: 2em;
   display: grid;
-  gap: 1em;
+  gap: 2em;
 }
 
 .team__item {
@@ -579,7 +578,7 @@ div[class$="item"] > p {
 .skills__box {
   margin-top: 2em;
   display: grid;
-  gap: 1em;
+  gap: 2em;
 }
 
 .skills__item {
@@ -593,9 +592,49 @@ div[class$="item"] > p {
   justify-content: center;
   align-items: center;
   color: var(--yellow);
-  border: 2px solid var(--yellow);
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent var(--yellow) var(--yellow) var(--yellow);
   border-radius: 50%;
+  transform: rotate(45deg);
   margin: 0 auto 1em;
+  position: relative;
+}
+
+.skills__item > div::before {
+  content: "";
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent var(--yellow) var(--yellow) var(--yellow);
+  border-radius: 50%;
+  opacity: 0;
+}
+
+.skills__item:nth-child(1) > div::before {
+  transform: rotate(-54deg);
+  opacity: 1;
+}
+
+.skills__item:nth-child(2) > div::before {
+  transform: rotate(-75.6deg);
+  opacity: 1;
+}
+
+.skills__item:nth-child(3) > div::before {
+  transform: rotate(-36deg);
+  opacity: 1;
+}
+
+.skills__item:nth-child(4) > div::before {
+  transform: rotate(-68.4deg);
+  opacity: 1;
+}
+
+.skills__item > div > span {
+  transform: rotate(-45deg);
 }
 
 /* Clitents section */
@@ -632,7 +671,7 @@ div[class$="item"] > p {
 .contact__box {
   margin-top: 2em;
   display: grid;
-  gap: 3em;
+  gap: 2em;
 }
 
 .contact__item {
@@ -672,17 +711,49 @@ div[class$="item"] > p {
 }
 
 .message > form textarea {
-    height: 100px;
+  height: 100px;
 }
 
 .message > form .btn {
-    margin: 0;
+  margin: 0;
 }
 
 /* Footer */
 .footer {
-    background-color: var(--dark-green);
-    color: var(--white);
-    text-align: center;
-    padding: 1em;
+  background-color: var(--dark-green);
+  color: var(--white);
+  text-align: center;
+  padding: 1em;
+}
+
+.footer > div {
+  margin-top: 0.4em;
+  font-size: 1.4rem;
+}
+
+.footer > div > a {
+  margin-inline: 0.2em;
+}
+
+/* Scroll up icon */
+.scroll-up {
+  background-color: var(--yellow);
+  color: var(--dark-green);
+  position: fixed;
+  bottom: 0.6em;
+  right: 0.6em;
+  padding: 0.2em 0.4em;
+  font-size: 1.4rem;
+  box-shadow: 0 0 6px -2px var(--shadow-color);
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  opacity: 0.7;
+  transition: transform var(--transition-duration, 350ms) ease,
+    opacity var(--transition-duration, 350ms) ease;
+}
+
+.scroll-up:hover,
+.scroll-up:focus {
+  transform: translateY(-5px);
+  opacity: 1;
 }
